Done handling missing values in data set

--- a/Android_Authenticity_Prediction.ipynb
+++ b/Android_Authenticity_Prediction.ipynb
@@ -377,7 +377,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries%matplotlib inline\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "import missingno as msno\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "from scipy.stats import norm\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from scipy import stats\n"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -397,10 +407,26 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "#connecting to Gdrive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "4CkvbW_SlZ_R"
+        "id": "QgSKsQp0nrS_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load Dataset\n",
+        "File_path=\"/content/drive/MyDrive/Colab Notebooks/ANDRIOD AUTHENTICITY PREDICTION.csv\"\n",
+        "\n",
+        "df=pd.read_csv(File_path)"
+      ],
+      "metadata": {
+        "id": "C5yWkwcMqCxc"
       },
       "execution_count": null,
       "outputs": []
@@ -417,7 +443,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "pd.set_option('display.max_columns', None)"
+      ],
+      "metadata": {
+        "id": "PVudNNORBz7o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset First Look\n",
+        "df.head()"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -437,7 +475,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "df.shape\n"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -457,7 +496,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "df.info(verbose=True)"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -477,10 +517,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "df.duplicated"
       ],
       "metadata": {
-        "id": "1sLdpKYkmox0"
+        "id": "-weZ_a3_9sxc"
       },
       "execution_count": null,
       "outputs": []
@@ -497,7 +537,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "def show_missing():\n",
+        "    missing = df.columns[df.isnull().any()].tolist()\n",
+        "    return missing\n",
+        "\n",
+        "# Missing data counts and percentage\n",
+        "print('Missing Data Count')\n",
+        "print(df[show_missing()].isnull().sum().sort_values(ascending = False))\n",
+        "print('--'*50)\n",
+        "print('Missing Data Percentage')\n",
+        "print(round(df[show_missing()].isnull().sum().sort_values(ascending = False)/len(df)*100,2))"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -508,7 +558,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "msno.bar(df)"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -546,7 +597,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "column=list(df.columns)\n",
+        "print(column)"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -557,7 +610,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "df.describe(include='all')"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -595,10 +649,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "df.nunique()"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating a function to extract all variables unique value\n",
+        "def unique_val(data):\n",
+        "   return df[data].unique()\n"
+      ],
+      "metadata": {
+        "id": "YPeZC32VGM4h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_variables=list(df.columns)                            # Abstracting variable name in a list type variablel\n",
+        "lst=[]                                                      #creating empty list to store unique value of each variable\n",
+        "for i in list_variables:\n",
+        "  lst.append(unique_val(i))                                 #appending unique value in lst variable\n",
+        "for j in range(0,len(list_variables)):\n",
+        "  print(f\"UNIQUE VALUE OF {list_variables[j]} : {lst[j]}\")  #printing all unique corresponding to their variables"
+      ],
+      "metadata": {
+        "id": "62t8G-wNGPNn"
       },
       "execution_count": null,
       "outputs": []
@@ -624,10 +708,332 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "# Making copy of dataframe\n",
+        "data_train=df.copy()"
+      ],
+      "metadata": {
+        "id": "5mKKM1HoH7aa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write your code to make your dataset analysis ready.\n",
+        "# Handling missing value\n",
+        "# Missing Values/Null Values Count\n",
+        "def show_missing():\n",
+        "    missing = df.columns[df.isnull().any()].tolist()\n",
+        "    return missing\n",
+        "\n",
+        "# Missing data counts and percentage\n",
+        "print('Missing Data Count')\n",
+        "print(df[show_missing()].isnull().sum().sort_values(ascending = False))\n",
+        "print('--'*50)\n",
+        "print('Missing Data Percentage')\n",
+        "print(round(df[show_missing()].isnull().sum().sort_values(ascending = False)/len(df)*100,2))"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['Related apps'].info() # Info of Realted apps column"
+      ],
+      "metadata": {
+        "id": "MRNTb8P0JSPg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filling null value with 'None'\n",
+        "data_train['Related apps'] = data_train['Related apps'].fillna('None')\n",
+        "print('Related apps Missing After:', data_train['Related apps'].isnull().sum())"
+      ],
+      "metadata": {
+        "id": "NCvDgHqPHKz3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['Dangerous permissions count'].info()"
+      ],
+      "metadata": {
+        "id": "G8hENDmnLOsp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filling null value with '0'\n",
+        "data_train['Dangerous permissions count'] = data_train['Dangerous permissions count'].fillna(0)\n",
+        "print('Dangerous permissions count:', data_train['Dangerous permissions count'].isnull().sum())"
+      ],
+      "metadata": {
+        "id": "Cwl3GDqWNYbm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#converting flot into int\n",
+        "data_train[['Dangerous permissions count','Price','Rating']]=data_train[['Dangerous permissions count','Price','Rating']].astype('int64')"
+      ],
+      "metadata": {
+        "id": "1C1SLA-tMYV7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['Description'].info()"
+      ],
+      "metadata": {
+        "id": "hk19PmlLSAUj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['Description'].head()"
+      ],
+      "metadata": {
+        "id": "5F3yc0deSim7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['Description'] = data_train['Description'].fillna('None')\n",
+        "print('Description:', data_train['Description'].isnull().sum())"
+      ],
+      "metadata": {
+        "id": "G2YVOwQDS54h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['App'].info()"
+      ],
+      "metadata": {
+        "id": "Ik5r5ERUTRSe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train['App'] = data_train['App'].fillna('None')\n",
+        "print('App:', data_train['App'].isnull().sum())"
+      ],
+      "metadata": {
+        "id": "sH7STz6XTitA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rechecking the null values\n",
+        "def show_missing():\n",
+        "    missing = data_train.columns[data_train.isnull().any()].tolist()\n",
+        "    return missing\n",
+        "\n",
+        "# Missing data counts and percentage\n",
+        "print('Missing Data Count')\n",
+        "print(data_train[show_missing()].isnull().sum().sort_values(ascending = False))\n",
+        "print('--'*50)\n",
+        "print('Missing Data Percentage')\n",
+        "print(round(data_train[show_missing()].isnull().sum().sort_values(ascending = False)/len(data_train)*100,2))"
+      ],
+      "metadata": {
+        "id": "6ddlzDMuTwkm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# find categorical variables\n",
+        "categorical = [var for var in data_train.columns if data_train[var].dtype=='O']\n",
+        "print('There are {} categorical variables'.format(len(categorical)))"
+      ],
+      "metadata": {
+        "id": "P-bEGmpOT_XW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# find Numerical variables\n",
+        "numerical = [var for var in data_train.columns if data_train[var].dtype!='O']\n",
+        "print('There are {} numerical variables'.format(len(numerical)))"
+      ],
+      "metadata": {
+        "id": "fyhQ4l7QWzWZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "discrete = []\n",
+        "for var in numerical:\n",
+        "    if len(data_train[var].unique())<20:\n",
+        "        print(var, ' values: ', data_train[var].unique())\n",
+        "        discrete.append(var)\n",
+        "\n",
+        "print('There are {} discrete variables'.format(len(discrete)))"
+      ],
+      "metadata": {
+        "id": "K2rLbgvNW9Fp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "continuous = [var for var in numerical if var not in discrete and var not in ['Class']]\n",
+        "print(continuous)"
+      ],
+      "metadata": {
+        "id": "SkkpyGIaXlBc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for var in continuous:\n",
+        "    plt.figure(figsize=(15,6))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    fig = sns.boxplot(y=data_train[var])\n",
+        "    fig.set_title('')\n",
+        "    fig.set_ylabel(var)\n",
+        "\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    fig = sns.distplot(data_train[var].dropna())\n",
+        "    fig.set_ylabel('Range')\n",
+        "    fig.set_xlabel(var)\n",
+        "\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "SYZ0EU3UYnZG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Capping the outlier rows with Percentiles\n",
+        "upper_lim = data_train['Price'].quantile(.95)\n",
+        "lower_lim = data_train['Price'].quantile(.05)\n",
+        "data_train.loc[(data_train[\"Price\"] > upper_lim),\"Price\"] = upper_lim\n",
+        "data_train.loc[(data_train[\"Price\"] < lower_lim),\"Price\"] = lower_lim"
+      ],
+      "metadata": {
+        "id": "THV7EJQ8YqgR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Capping the outlier rows with Percentiles\n",
+        "upper_lim = data_train['Number of ratings'].quantile(.95)\n",
+        "lower_lim = data_train['Number of ratings'].quantile(.05)\n",
+        "data_train.loc[(data_train[\"Number of ratings\"] > upper_lim),\"Number of ratings\"] = upper_lim\n",
+        "data_train.loc[(data_train[\"Number of ratings\"] < lower_lim),\"Number of ratings\"] = lower_lim"
+      ],
+      "metadata": {
+        "id": "llwHqAc1alD_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Capping the outlier rows with Percentiles\n",
+        "upper_lim = data_train['Dangerous permissions count'].quantile(.95)\n",
+        "lower_lim = data_train['Dangerous permissions count'].quantile(.05)\n",
+        "data_train.loc[(data_train[\"Dangerous permissions count\"] > upper_lim),\"Dangerous permissions count\"] = upper_lim\n",
+        "data_train.loc[(data_train[\"Dangerous permissions count\"] < lower_lim),\"Dangerous permissions count\"] = lower_lim"
+      ],
+      "metadata": {
+        "id": "Xw40QjipbQz0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for var in continuous:\n",
+        "    plt.figure(figsize=(15,6))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    fig = sns.boxplot(y=data_train[var])\n",
+        "    fig.set_title('')\n",
+        "    fig.set_ylabel(var)\n",
+        "\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    fig = sns.distplot(data_train[var].dropna())\n",
+        "    fig.set_ylabel('Range')\n",
+        "    fig.set_xlabel(var)\n",
+        "\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "Qf5rEEJGbfPO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# outlies in discrete variables\n",
+        "for var in discrete:\n",
+        "    print(data_train[var].value_counts() / np.float(len(data_train)))\n",
+        "    print()"
+      ],
+      "metadata": {
+        "id": "LgZOrjSQcCta"
       },
       "execution_count": null,
       "outputs": []
@@ -671,7 +1077,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "# Chart - 1 visualization code\n",
+        "for var in continuous:\n",
+        "    plt.figure(figsize=(15,6))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    fig = sns.boxplot(y=data_train[var])\n",
+        "    fig.set_title('')\n",
+        "    fig.set_ylabel(var)\n",
+        "\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    fig = sns.distplot(data_train[var].dropna())\n",
+        "    fig.set_ylabel('Number of houses')\n",
+        "    fig.set_xlabel(var)\n",
+        "\n",
+        "    plt.show()"
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
